--- a/Episode 2/package.json
+++ b/Episode 2/package.json
@@ -10,14 +10,17 @@
     "type": "git",
     "url": "git+https://github.com/Divyaradharapu/React.git"
   },
-  "license": "ISC",
+  "license": "ISC", 
   "author": "",
   "type": "commonjs",
-  "main": "App.js",
   "scripts": {
     "test": "jest"
   },
   "devDependencies": {
     "parcel": "^2.16.3"
+  },
+  "dependencies": {
+    "react": "^19.2.3",
+    "react-dom": "^19.2.3"
   }
 }
